# cc_proxy_pub

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_android_nightly.sh  config.toml  debug.sh  get_all_code.sh  run.sh
.github/workflows/: build_product.yml
src/: main.rs  upstream_selector.rs
src/config/: format.rs  mod.rs  selector.rs
src/gateway/: handler.rs  mod.rs  service.rs
src/gateway/handler/: content_tag.rs  mod.rs  request.rs  response.rs  system_prompt.rs  thinking_patch.rs  tool_desc.rs  utils.rs
src/gateway/openai_compat/: media.rs  mod.rs  request.rs  response.rs  tools.rs
src/gateway/optimization/: command_utils.rs  detection.rs  mod.rs  response_builder.rs
