[package]
name = "cc_proxy"
version = "0.1.0"
edition = "2024"

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
expect_used = { level = "warn", priority = -1 }
similar_names = "allow"
missing_errors_doc = "allow"
missing_safety_doc = "allow"
missing_panics_doc = "allow"
cast_precision_loss = "allow"
struct_excessive_bools = "allow"

[dependencies]
anyhow = "1.0.102"
futures-util = { version = "0.3.32", default-features = false, features = [
  "std",
] }
arc-swap = "1.8.2"
bytes = "1.11.1"
chrono = "0.4.44"
flate2 = "1.1.9"
http = "1.4.0"
http-body-util = "0.1.3"
hyper = { version = "1.8.1", features = ["full"] }
hyper-rustls = { version = "0.27.7", features = [
  "http1",
  "http2",
  "webpki-roots",
] }
hyper-util = { version = "0.1.20", features = ["full"] }
mimalloc = { version = "0.1.48", features = ["no_thp", "override"] }
notify = "8.2.0"
rayon = "1.11.0"
salvo = { version = "0.89.1", features = ["proxy", "affix-state"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
taplo = "0.14.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "local-time",
  "env-filter",
] }

[profile.dev]
debug = 0
debug-assertions = true
incremental = true
panic = "abort"

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "thin"
opt-level = 2
strip = true
debug = 0
debug-assertions = false
incremental = false
panic = "abort"
